[package]
name = "kovi-plugin-expand-lagrange"
version = "0.6.1"
edition = "2021"
keywords = [
    "kovi",
    "kovi-plugin",
    "kovi-plugin-expand",
    "kovi-expand",
    "lagrange",
]
description = "Kovi 的 Lagrange Api拓展。"
license = "MPL-2.0"
authors = ["ThriceCola <thricecola@hotmail.com>"]
repository = "https://github.com/Threkork/kovi-plugin/"

[dependencies]
kovi = ">= 0.8.4"
