[package]
name = "kovi-plugin-expand-napcat"
version = "0.0.3"
edition = "2021"
keywords = [
    "kovi",
    "kovi-plugin",
    "kovi-plugin-expand",
    "kovi-expand",
    "napcat",
]
description = "Kovi 的 Napcat Api拓展。"
license = "MPL-2.0"
authors = ["Threkork <threkork@hotmail.com>"]
repository = "https://github.com/Threkork/kovi-plugin/"

[dependencies]
kovi = ">= 0.8.4"
serde = "1"
