[package]
name = "kovi-plugin-like"
version = "1.0.0"
edition = "2021"
keywords = ["kovi", "kovi-plugin"]
description = "Kovi plugin like"
license = "MPL-2.0"
authors = ["Threkork <threkork@hotmail.com>"]

[dependencies]
kovi = ">= 0.6.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
