[package]
name = "kovi-plugin-like"
version = "1.1.0"
edition = "2021"
keywords = ["kovi", "kovi-plugin"]
description = "kovi 的点赞插件，可在config.json里配置。"
license = "MPL-2.0"
authors = ["Threkork <threkork@hotmail.com>"]

[dependencies]
kovi = ">= 0.6.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
